--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "author": "Guillaume Van de Velde",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^1.18.3"
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pug": "^3.0.2"
   }
 }
